--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,23 @@ body {
 	height: 100%;
 }
 
+#list{
+	position: absolute;
+	left: 175px;
+	top: 65px;
+	right: 0px;
+	margin: 0px;
+	padding: 15px;
+	list-style-type: none;
+}
+
+.manga {
+	padding: 5px;
+	width: 200px;
+	height: 500px;
+	float: left;
+}
+
 nav {
 	position: fixed;
 	top: 0px;
@@ -39,9 +56,15 @@ nav ul a {
 }
 
 h1 {
+	position: fixed;
+	top: 0px;
+	right: 0px;
+	left: 175px;
 	margin: 0px;
+	height: 45px;
 	padding: 10px 0px 10px 25px;
-	background: #CCCCCC
+	background: #CCCCCC;
+	z-index: 1;
 }
 
 footer {
